spacing fix

--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -1,6 +1,6 @@
 .advantages-section {
-    margin-top: 32px;
-    margin-bottom: 32px;
+    padding-top: 32px;
+    padding-bottom: 32px;
 }
 
 .advantages-subtitle {
@@ -65,8 +65,8 @@
 
 @media only screen and (min-width: 768px) {
 .advantages-section {
-    margin-top: 64px;
-    margin-bottom: 64px;
+    padding-top: 64px;
+    padding-bottom: 64px;
 }
     
 .advantages-subtitle {
